#Added ImageView for AlbumCover

--- a/app/src/main/res/layout/adapter_trackslist.xml
+++ b/app/src/main/res/layout/adapter_trackslist.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+     android:layout_width="match_parent"
     android:clickable="true"
     android:padding="10dp"
     android:background="?selectableItemBackground"
+    android:layout_height="wrap_content">
+    <ImageView
+        android:layout_width="60dp"
+        android:src="@drawable/placeholder_search"
+        android:layout_centerVertical="true"
+        android:layout_height="60dp"
+        android:id="@+id/imgAlbumCover"/>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_centerVertical="true"
+    android:layout_marginLeft="10dp"
+    android:layout_toRightOf="@+id/imgAlbumCover"
     android:layout_height="wrap_content">
     <TextView
         android:layout_width="match_parent"
@@ -22,3 +35,4 @@
         android:id="@+id/txt_album"
         android:text="Album cover"/>
 </LinearLayout>
+</RelativeLayout>
